--- a/mc2app/styles/globals.scss
+++ b/mc2app/styles/globals.scss
@@ -2,22 +2,22 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:Roboto,sans-serif;
+  font-size: 16px;
   background: linear-gradient(90.99deg, #F2F2F2 0%, #F2F2F2 35%, #00508C 65%, #000000 90%);
-  background-size: 200% 100%;
-  animation: gradient 60s ease-in-out infinite;
+  background-size: 130% 100%;
+  animation: gradient 10s ease-in-out infinite;
 }
 
 @keyframes gradient {
 	0% {
-		background-position: 50% 50%;
+		background-position:50% 100%;
 	}
 	50% {
-		background-position: 100% 50%;
+		background-position: 100% 100%;
 	}
 	100% {
-		background-position: 50% 50%;
+		background-position: 50% 100%;
 	}
 }
 
