--- a/mc2app/styles/globals.scss
+++ b/mc2app/styles/globals.scss
@@ -4,22 +4,22 @@ body {
   margin: 0;
   font-family:Roboto,sans-serif;
   font-size: 16px;
-  background: linear-gradient(90.99deg, #F2F2F2 0%, #F2F2F2 35%, #00508C 65%, #000000 90%);
-  background-size: 130% 100%;
-  animation: gradient 10s ease-in-out infinite;
+  background: linear-gradient(90deg, #FFF 15%, #F2F2F2 30%, #00508C 50%, #000000 90%);
+  background-size: 100% 100%;
+  // animation: gradient 10s ease-in-out infinite;
 }
 
-@keyframes gradient {
-	0% {
-		background-position:50% 100%;
-	}
-	50% {
-		background-position: 100% 100%;
-	}
-	100% {
-		background-position: 50% 100%;
-	}
-}
+// @keyframes gradient {
+// 	0% {
+// 		background-position:50% 100%;
+// 	}
+// 	50% {
+// 		background-position: 100% 100%;
+// 	}
+// 	100% {
+// 		background-position: 50% 100%;
+// 	}
+// }
 
 
 a {
