--- a/mc2app/styles/globals.scss
+++ b/mc2app/styles/globals.scss
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family:Roboto,sans-serif;
   font-size: 16px;
-  background: linear-gradient(90deg, #FFF 15%, #F2F2F2 30%, #00508C 50%, #000000 90%);
+  background: linear-gradient(90deg, #FFF 15%, #F2F2F2 28%,#3e8ecc 40%, #00508C 50%, #000000 90%);
   background-size: 100% 100%;
   // animation: gradient 10s ease-in-out infinite;
 }
