--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -1,5 +1,7 @@
 .container {
-  padding: 0 2rem;
+  padding: 2rem;
+  transition: background-color 2s ease-out;
+  background-color: none;
 }
 
 .main {
@@ -10,6 +12,14 @@
   // flex-direction: column;
   // justify-content: center;
   // align-items: center;
+}
+.youtube{
+
+  border-radius: 1rem;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
+  height: 15rem;
 }
 
 .element{
