--- a/mc2app/styles/News.module.scss
+++ b/mc2app/styles/News.module.scss
@@ -3,20 +3,22 @@
     flex-direction: row;
     gap:1rem;
     margin-bottom: 5.5rem;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
 
 }
 .list>:first-child{
     flex: 1 1 100%;
+    // border-radius: 1rem;
+    // background-color: rgb(218, 218, 218,0.5);
 }
 .list>*{
-    flex: 1 1 48%;
-    height: fit-content;
+    flex: 1 1 100%;
 }
 .image{
     border-radius: 1rem;
 }
 .description{
+    
     font-style: normal;
     font-weight:normal;
     font-size: 0.9rem;
