--- a/mc2app/styles/globals.scss
+++ b/mc2app/styles/globals.scss
@@ -22,11 +22,11 @@ body {
 // }
 
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+// a {
+//   color: inherit;
+//   text-decoration: none;
+// }
 
-* {
-  box-sizing: border-box;
-}
+// * {
+//   box-sizing: border-box;
+// }
