--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -1,11 +1,36 @@
+
 .container {
-  padding: 2rem;
-  transition: background-color 2s ease-out;
+  display: flex;
+  flex-direction: column;
+  // transition: background-color 2s ease-out;
   background-color: none;
+  height: 100vh;
+  overflow: hidden;
+  overflow-y:scroll;
+  scroll-snap-align:center;
+  border-bottom: 1px solid #BDFF00;
+  &::-webkit-scrollbar{
+    width: 0.4rem;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #BDFF00; 
+  }
+
+}
+
+
+.box{
+  width: 100%;
+  height: 100%;
+  padding-top: 3rem;
 }
 
 .main {
   display: flex;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   // padding: 4rem 0;
   // flex: 1;
   // display: flex;
@@ -18,7 +43,8 @@
   border-radius: 1rem;
   margin-left: 1rem;
   margin-bottom: 1rem;
-  width: 100%;
+  margin-right: 1rem;
+  width: 97%;
   height: 15rem;
 }
 
@@ -47,6 +73,19 @@
   font-weight: 700;
   font-size: 1.3rem;
   color:#004377
+}
+
+.title{
+  background-color: #BDFF00;
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  width: 10rem;
+  padding: 0.5rem;
+  position:relative;
+  display: flex;
+  left: 50%;
+  top: -20px;
+  justify-items: center;
 }
 
 // .footer {
