--- a/mc2app/styles/Topmenu.module.scss
+++ b/mc2app/styles/Topmenu.module.scss
@@ -1,21 +1,32 @@
 .container{
     display: flex;
+    justify-content:flex-end;
+    align-content: flex-start;
     gap: 1.5rem;
-    justify-content: flex-end;
     height: 2rem;
+    width: 100vw;
     padding-top: 1rem;
+    position: fixed;
+    top: 0%;
+    z-index: 1;
+    background-color: rgba($color: #000000, $alpha: 1.0);
+    border-bottom: solid #BDFF00 1px;
     
 }
 .element{
     cursor:pointer;
-    font-size: 1.2rem;
-    font-weight: bold;
+    font-size: 1.0rem;
+    font-weight:500;
     color: white;
+    padding-right: 0.5rem;
     
 
     &:hover{
         color: #BDFF00;
         border-bottom: 3px solid #BDFF00;
+    }
+    &:link{
+        text-decoration: none;
     }
 
 }
