--- a/mc2app/styles/globals.scss
+++ b/mc2app/styles/globals.scss
@@ -6,6 +6,10 @@ body {
   font-size: 16px;
   background: linear-gradient(90deg, #FFF 15%, #F2F2F2 28%,#3e8ecc 40%, #00508C 50%, #000000 90%);
   background-size: 100% 100%;
+  height: 100vh;
+  overflow-y: hidden;
+  scroll-behavior:smooth;
+  scroll-snap-type: y mandatory;
   // animation: gradient 10s ease-in-out infinite;
 }
 
