--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   // transition: background-color 2s ease-out;
-  background-color: none;
   height: 100vh;
   overflow: hidden;
   overflow-y:scroll;
@@ -24,6 +23,11 @@
   width: 100%;
   height: 100%;
   padding-top: 3rem;
+}
+
+.boxbackground{
+  @extend .box;
+  background-color: rgba($color: #000, $alpha: 1);
 }
 
 .main {
