hover to mc logos

--- a/mc2app/styles/ListWithLogo.module.scss
+++ b/mc2app/styles/ListWithLogo.module.scss
@@ -19,5 +19,16 @@
     display: flex;
     color:#004377;
     column-gap: 0.5rem;
+    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: all 0.2s ease-in-out;
+
+    &:hover{
+        cursor: pointer;
+        transform:translateX(10px);
+    }
+
+    // &:hover::before{
+    //     content: 'asdasd';
+    // }
 
 }
