--- a/mc2app/styles/ListWithLogo.module.scss
+++ b/mc2app/styles/ListWithLogo.module.scss
@@ -8,11 +8,14 @@
     border-radius: 0.5rem;
 }
 .companyName{
+    display: flex;
     color:#004377;
     font-style: normal;
     font-weight: 600;
     font-size: 1rem;
-    padding-top: 2.7rem;
+    span{
+        align-self: flex-end;
+    }
 
 }
 .smallContainer{
@@ -34,7 +37,8 @@
 }
 .group{
     display: flex;
-    width: 30%;
+    flex-wrap: wrap;
+    width: 180px;
     gap:0.3rem;
 }
 
