--- a/mc2app/styles/Modal.module.scss
+++ b/mc2app/styles/Modal.module.scss
@@ -1,5 +1,5 @@
 .container{
-    background-color: #fff;
+    background-color: #F2F2F2;
     position: fixed;
     border: dashed 1px #004377;
     z-index: 50;
