--- a/mc2app/styles/News.module.scss
+++ b/mc2app/styles/News.module.scss
@@ -4,6 +4,8 @@
     gap:1rem;
     margin-bottom: 5.5rem;
     flex-wrap:wrap;
+    width: 90%;
+    padding-left: 2rem;
 
 }
 .list>:first-child{
@@ -21,7 +23,7 @@
     
     font-style: normal;
     font-weight:normal;
-    font-size: 0.9rem;
+    font-size: 1rem;
     line-height: 1.4rem;
     color: white;
     
