--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -66,6 +66,61 @@
   display: flex;
   
 }
+.about{
+  padding-top: 3rem;
+  display: flex;
+}
+.about_1{
+  // background-color: #F1F1F1;
+  height: 100%;
+  width:33%;
+  display: flex;
+  flex-direction: column;
+  p{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+.about_2{
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: #000;
+  width:66%;
+  outline: #000 dashed 1px;
+  outline-offset: 3px;
+  justify-content: space-around;
+  p{
+    width:25vw;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+.services{
+  display: flex;
+  height: 100%;
+
+}
+.services_1{
+  height: 100%;
+  width:33%;
+}
+.services_2{
+  background-color: #BDFF00;
+  height: 100%;
+  width:33%;
+  outline: #000 dashed 1px;
+  outline-offset: 3px;
+}
+.services_3{
+  background-color: #000;
+  height: 100%;
+  width:33%;
+  outline: #000 dashed 1px;
+  outline-offset: 3px;
+
+}
 .set{
   display: flex;
   flex-direction: column;
