--- a/mc2app/styles/globals.scss
+++ b/mc2app/styles/globals.scss
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family:Roboto,sans-serif;
   font-size: 16px;
-  background: linear-gradient(90deg, #FFF 15%, #F2F2F2 28%,#3e8ecc 40%, #00508C 50%, #000000 90%);
+  background: linear-gradient(90deg, #F1F1F1 15%, #F2F2F2 32%,#3e8ecc 40%, #00508C 50%, #000000 90%);
   background-size: 100% 100%;
   height: 100vh;
   // overflow-y: hidden;
