--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -7,7 +7,6 @@
   overflow: hidden;
   overflow-y:scroll;
   scroll-snap-align:center;
-  border-bottom: 1px solid #BDFF00;
   &::-webkit-scrollbar{
     width: 0.4rem;
   }
@@ -86,10 +85,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: #000;
+  // background-color: #000;
   width:66%;
-  outline: #000 dashed 1px;
-  outline-offset: 3px;
+  border-left: 1px dashed #000;
   justify-content: space-around;
   p{
     width:25vw;
@@ -98,6 +96,7 @@
   }
 }
 .services{
+  padding-top:3rem;
   display: flex;
   height: 100%;
 
@@ -110,15 +109,14 @@
   background-color: #BDFF00;
   height: 100%;
   width:33%;
-  outline: #000 dashed 1px;
-  outline-offset: 3px;
+  border-left: 1px dashed #000;
+  border-right: 1px dashed #000;
 }
 .services_3{
-  background-color: #000;
+  // background-color: #000;
   height: 100%;
   width:33%;
-  outline: #000 dashed 1px;
-  outline-offset: 3px;
+ 
 
 }
 .set{
