--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -95,6 +95,60 @@
     padding-right: 1rem;
   }
 }
+
+.career{
+  padding-top: 3rem;
+  display: flex;
+}
+.career_1{
+  // background-color: #F1F1F1;
+  height: 100%;
+  width:33%;
+  display: flex;
+  flex-direction: column;
+  p{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+.career_2{
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  // background-color: #000;
+  width:66%;
+  height: 90vh;
+  border-left: 1px dashed #000;
+  justify-content: flex-end;
+  position: relative;
+  
+  p{
+    width:25vw;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
+.career_3{
+  background-image: url('/photos/colleagues.jpg');
+  background-repeat:no-repeat;
+  background-size: cover;
+  mix-blend-mode: overlay;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
+.career_4{
+  margin-top: 50vh;
+  height: 40vh;
+  width: 100%;
+  background-color: #000;
+}
+
+
+
 .services{
   padding-top:3rem;
   display: flex;
