--- a/mc2app/styles/Popup.module.scss
+++ b/mc2app/styles/Popup.module.scss
@@ -18,6 +18,19 @@
     border-radius: 1rem;
     margin-top: 10vh;
     overflow: hidden;
+    overflow-y: scroll;
+
+        scroll-snap-align:center;
+    &::-webkit-scrollbar{
+        width: 0.4rem;
+        border-radius: 1rem;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #CDCDCD;
+        border-radius: 1rem;
+        
+    }
 }
 .project_details{
     display: flex;
