--- a/mc2app/styles/Popup.module.scss
+++ b/mc2app/styles/Popup.module.scss
@@ -54,3 +54,10 @@
 .information_label{
     padding-bottom: 5px;
 }
+.map_container{
+    padding-top: 1rem;
+}
+.iframe_container{
+    border-radius: 1rem;
+    border: 1px dashed #CDCDCD;
+}
