--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -131,14 +131,14 @@
 }
 
 .career_3{
-  background-image: url('/photos/colleagues.jpg');
+  background-image: url('/photos/conf.jpg');
   background-repeat:no-repeat;
   background-size: cover;
   mix-blend-mode: overlay;
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: -1;
+  z-index: 0;
 }
 .career_4{
   margin-top: 50vh;
