--- a/mc2app/styles/globals.scss
+++ b/mc2app/styles/globals.scss
@@ -4,7 +4,9 @@ body {
   margin: 0;
   font-family:Roboto,sans-serif;
   font-size: 16px;
-  background: linear-gradient(90deg, #F1F1F1 15%, #F2F2F2 32%,#3e8ecc 40%, #00508C 50%, #000000 90%);
+  // background: linear-gradient(90deg, #F1F1F1 15%, #F2F2F2 32%,#3e8ecc 40%, #00508C 50%, #000000 90%);
+  // background: linear-gradient(90deg, #000000 5%, #4a4a4a 10%,#7f7f7f 15%,#cacaca 40%,#cacaca 60%,#7f7f7f 85%, #4a4a4a 90%, #000000 95%);
+  // background-color: rgb(169, 169, 169);
   background-size: 100% 100%;
   height: 100vh;
 
