--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -1,8 +1,10 @@
 
-.container {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500&display=swap');
+.main_container{
   display: flex;
-  flex-direction: column;
-  // transition: background-color 2s ease-out;
+  justify-content: center;
+  width: 100vw;
+  justify-content: center;
   height: 100vh;
   overflow: hidden;
   overflow-y:scroll;
@@ -14,6 +16,14 @@
   &::-webkit-scrollbar-thumb {
     background: #BDFF00; 
   }
+  
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  // transition: background-color 2s ease-out;
+  width: 60vw;
 
 }
 
@@ -21,7 +31,7 @@
 .box{
   width: 100%;
   height: 100%;
-  padding-top: 3rem;
+  padding-top: 4rem;
   animation: fadein 1s ease-in;
 
   @keyframes fadein {
@@ -38,7 +48,6 @@
 .main {
   display: flex;
   padding-top: 1rem;
-  padding-left: 1rem;
   padding-right: 1rem;
   // padding: 4rem 0;
   // flex: 1;
@@ -53,15 +62,15 @@
   margin-left: 1rem;
   margin-bottom: 1rem;
   margin-right: 1rem;
-  width: 97%;
+  width: 100%;
   height: 15rem;
 }
 
 .element{
-  width: 33%;
+  width: 50%;
 }
 .elementWithNews{
-  width: 33%;
+  width: 50%;
   display: flex;
   
 }
@@ -176,20 +185,23 @@
 .set{
   display: flex;
   flex-direction: column;
-  row-gap: 0.5rem;
+  left: 0%;
+  top: 3rem;
+  position: absolute;
+  width: 19vw;
 }
 
 .header{
-  font-size: 5rem;
+  font-size: 6rem;
   font-style: normal;
   font-weight: 700;
-  line-height: 4rem;
-  color:#004377
+  color:#7c7c7c;
+  margin-top: auto;
 }
 .subheader{
   font-weight: 700;
   font-size: 1.3rem;
-  color:#004377
+  color:#7c7c7c;
 }
 
 .title{
@@ -224,6 +236,22 @@
     background-color: #000;
     border-radius: 1rem;
   }
+}
+
+.group{
+  display: flex;
+  padding-bottom: 0.5rem;
+}
+.typo_group{
+  margin-top: auto;
+  font-size: 2.5rem;
+  padding-left: 0.5rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  color: #004377;
+}
+.image_group{
+  border-radius: 0.3rem;
 }
 
 
