--- a/mc2app/styles/News.module.scss
+++ b/mc2app/styles/News.module.scss
@@ -4,8 +4,7 @@
     gap:1rem;
     margin-bottom: 5.5rem;
     flex-wrap:wrap;
-    width: 90%;
-    padding-left: 2rem;
+    width: 100%;
 
 }
 .list>:first-child{
@@ -25,7 +24,7 @@
     font-weight:normal;
     font-size: 1rem;
     line-height: 1.4rem;
-    color: white;
+    color: #000;
     
 }
 .descriptionTitle{
@@ -48,7 +47,7 @@
     padding-top: 1rem;
     display: flex;
     column-gap: 0.5rem;
-    color:#fff;
+    color:#000;
     font-size:1rem;
     vertical-align: middle;
 
