--- a/mc2app/styles/Topmenu.module.scss
+++ b/mc2app/styles/Topmenu.module.scss
@@ -74,15 +74,27 @@ color:#000;
         color: #BDFF00;
     }
 }
-@media screen and (min-width:200px) and (max-width:600px) {
+@media screen and (min-width:360px) and (max-width:600px) {
     .element{
         cursor:pointer;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         font-weight:500;
         color: white;
         padding-right: 0.3rem;
+        padding-left: 0.3rem;
+        &::after{
+            content: "";
+            border-right: #BDFF00 1px solid;
+            float: right;
+            position: absolute;
+            height: 1rem;
+            width: 1px;
+            margin-left: 0.2rem;
+            margin-right: 0.2rem;
+        }
     }
     .container{
+        min-width: 360px;
         width: 100vw;
         justify-content: space-between;
     }
