--- a/mc2app/styles/Popup.module.scss
+++ b/mc2app/styles/Popup.module.scss
@@ -96,4 +96,9 @@
         width: 90%;
         margin: 1rem;
     }
+    .project_information{
+        width: 95vw;
+        height: 95vh;
+        margin-top: 2vh;
+    }
 }
