--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -57,7 +57,6 @@
   // align-items: center;
 }
 .youtube{
-
   border-radius: 1rem;
   margin-left: 1rem;
   margin-bottom: 1rem;
@@ -310,6 +309,14 @@
   }
   .services_3{
     padding-bottom: 4.5rem;
+  }
+  .ytContainer{
+    padding-bottom: 4rem;
+    padding-top: 2rem;
+  }
+  .youtube{
+    width: 100%;
+    height: 8rem;
   }
 }
 
