--- a/mc2app/styles/Home.module.scss
+++ b/mc2app/styles/Home.module.scss
@@ -276,9 +276,6 @@
   .element{
     width: 100%;
   }
-  .news{
-    width: 90vw;
-  }
   .about{
     padding-top: 3rem;
     flex-direction: column;
@@ -317,6 +314,27 @@
   .youtube{
     width: 100%;
     height: 8rem;
+  }
+  .news{
+    width: 90vw;
+    overflow: hidden;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+    height: 80vh;
+    &::-webkit-scrollbar{
+      width: 0.3rem;
+      height: 0.4rem;
+    }
+  
+    &::-webkit-scrollbar-thumb {
+      background: #BDFF00;
+      border-radius: 1rem;
+    }
+    &::-webkit-scrollbar-track{
+      background-color: rgb(216, 216, 216);
+      border-radius: 1rem;
+    }
   }
 }
 
