--- a/mc2app/styles/Members.module.scss
+++ b/mc2app/styles/Members.module.scss
@@ -19,3 +19,37 @@
     flex-direction: column;
     text-align: center;
 }
+.hr{
+    width: 60%;
+    background-color:white;
+    border: 0;
+    height: 0px;
+    border-top: dashed 1px #BDFF00;
+}
+@media screen and (min-width:200px) and (max-width:600px) {
+    .main{
+        gap: 1rem;
+        padding-top: 4rem;
+        flex-wrap: wrap;
+        padding-bottom: 5rem;
+    }
+    .picture{
+        width: 5rem;
+        height: 5rem;
+        margin-bottom: 0.5rem;
+    }
+    .profile{
+        width: 6rem;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        font-size: 0.8rem;
+    }
+    .hr{
+        width: 60%;
+        background-color:white;
+        border: 0;
+        height: 0px;
+        border-top: dashed 1px #BDFF00;
+    }
+}
