--- a/mc2app/styles/Members.module.scss
+++ b/mc2app/styles/Members.module.scss
@@ -28,6 +28,7 @@
 }
 @media screen and (min-width:200px) and (max-width:600px) {
     .main{
+        justify-content: center;
         gap: 1rem;
         padding-top: 4rem;
         flex-wrap: wrap;
