--- a/mc2app/styles/Members.module.scss
+++ b/mc2app/styles/Members.module.scss
@@ -33,6 +33,7 @@
         padding-top: 4rem;
         flex-wrap: wrap;
         padding-bottom: 5rem;
+        padding-top: 5rem;
     }
     .picture{
         width: 5rem;
