--- a/mc2app/styles/News.module.scss
+++ b/mc2app/styles/News.module.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     gap:1rem;
     margin-bottom: 5.5rem;
-    flex-wrap:wrap;
+    flex-wrap: nowrap;
     width: 100%;
 
 }
