--- a/mc2app/styles/Bim.module.scss
+++ b/mc2app/styles/Bim.module.scss
@@ -27,9 +27,64 @@
 .small_typo{
     font-size: 1.5rem;
     margin-top: auto;
+    padding-bottom: 0.5rem;
 }
 .main{
     display: flex;
     flex-direction: row;
     gap: 1rem;
+}
+.left_typo{
+    font-weight:700;
+    color:white;
+    font-size:5rem;
+    line-height:'3rem'
+
+}
+.right_typo{
+    font-weight:700; 
+    color:#BDFF00;
+    font-size:3rem
+}
+.text{
+    color:#fff;
+}
+@media screen and (min-width:360px) and (max-width:600px) {
+    .main{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .container_first{
+        line-height: 0.9rem;
+        height: 20vh;
+        padding: 1rem;
+    }
+    
+    .container_second{
+        line-height: 0.9rem;
+        height: 20vh;
+        padding: 1rem;
+    }
+    .small_typo{
+        font-size: 1rem;
+        margin-top: 1rem;
+    }
+    .left_typo{
+        font-weight:700;
+        color:white;
+        font-size:3rem;
+        line-height:1.3rem
+
+    }
+    .right_typo{
+        font-weight:700; 
+        color:#BDFF00;
+        font-size:2rem;
+        line-height:0.2rem
+    }
+    .text{
+        color:#fff;
+        font-size: 0.8rem;
+    }
 }
