--- a/mc2app/styles/Bim.module.scss
+++ b/mc2app/styles/Bim.module.scss
@@ -2,7 +2,7 @@
     background: rgba(219, 0, 255, 1.0);
     background: linear-gradient(45deg, #000000 15%, #000000 32%,#ab2c7f 40%, #c1088c 50%, #ff00ae 90%);
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;;
@@ -12,7 +12,7 @@
     background: rgba(219, 0, 255, 1.0);
     background: linear-gradient(45deg, #000000 15%, #000000 32%,#2cab9a 40%, #08c1b2 50%, #00ffb3 90%);
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;;
@@ -54,6 +54,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+
     }
     .container_first{
         line-height: 0.9rem;
@@ -73,18 +74,55 @@
     .left_typo{
         font-weight:700;
         color:white;
-        font-size:3rem;
-        line-height:1.3rem
+        font-size:2.5rem;
+        line-height:1rem
 
     }
     .right_typo{
         font-weight:700; 
         color:#BDFF00;
-        font-size:2rem;
+        font-size:1.5rem;
         line-height:0.2rem
     }
     .text{
         color:#fff;
         font-size: 0.8rem;
+    }
+}
+
+@media screen and (min-width:360px) and (max-width:600px) and (max-height: 700px) {
+    .main{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+
+    }
+
+     .container_first{
+        line-height: 0.9rem;
+        height: 18vh;
+        padding: 1rem;
+        padding-bottom: 1.4rem;
+
+    }
+    
+    .container_second{
+        line-height: 0.9rem;
+        height: 18vh;
+        padding: 1rem;
+        padding-bottom: 1.4rem;
+    }
+    .text{
+        font-size: 0.7rem;
+    }
+    .small_typo{
+        font-size: 1rem;
+        margin-top: 0.8rem;
+    }
+    .buttons_container{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 0.5rem;
     }
 }
