--- a/mc2app/styles/ImagesWithNames.module.scss
+++ b/mc2app/styles/ImagesWithNames.module.scss
@@ -125,6 +125,9 @@
         justify-content: flex-start;
     }
 }
+@media screen and (min-width:360px) and (max-width:600px) and (max-height: 700px) {
+    
+}
 
 // .container{
 //     width: 72.2vw;
