--- a/mc2app/styles/News.module.scss
+++ b/mc2app/styles/News.module.scss
@@ -78,15 +78,20 @@
     }
     .image{
         display: none;
+        position: absolute;
+        z-index: -1;
+        
     }
     .icon{
         height: 0.9rem;
         width: 0.9rem;;
       }
     .dataAndTitle{
+        // background-color: rgba($color: #000000, $alpha: 0.5);
         width: 100vw;
     }
     .description{
+        // background-color: rgba($color: #000000, $alpha: 0.5);
         padding-right: 10vw;
         font-size: 0.8rem;
         line-height: 1.1rem;
@@ -98,6 +103,9 @@
     .descriptionTitle{
         font-size: 1rem;
         padding-bottom: 0;
+    }
+    .newscontainer{
+        position: relative;
     }
 
   }
