--- a/mc2app/styles/News.module.scss
+++ b/mc2app/styles/News.module.scss
@@ -76,12 +76,12 @@
     .list{
         flex-wrap: nowrap;
     }
-    .image{
-        display: none;
-        position: absolute;
-        z-index: -1;
+    // .image{
+    //     display: none;
+    //     position: absolute;
+    //     z-index: -1;
         
-    }
+    // }
     .icon{
         height: 0.9rem;
         width: 0.9rem;;
