--- a/mc2app/styles/Projects.module.scss
+++ b/mc2app/styles/Projects.module.scss
@@ -99,7 +99,7 @@
     .list{
         display: grid;
         padding-top: 1rem;
-        grid-template-columns: 100vw;
+        grid-template-columns: 1fr;
     }
     .main{
         width: 90vw;
