--- a/mc2app/styles/News.module.scss
+++ b/mc2app/styles/News.module.scss
@@ -73,6 +73,7 @@
   }
 
   @media screen and (min-width:200px) and (max-width:600px) {
+
     .list{
         flex-wrap: nowrap;
     }
@@ -82,6 +83,18 @@
     //     z-index: -1;
         
     // }
+    .image{
+       border-radius: 0;
+    }
+    .image_container {
+        overflow: hidden;
+        max-height: 30vh;
+        max-width: 86vw;
+        border-radius: 1rem;
+    }
+    .newscontainer{
+        height: 60vh;
+    }
     .icon{
         height: 0.9rem;
         width: 0.9rem;;
@@ -89,6 +102,7 @@
     .dataAndTitle{
         // background-color: rgba($color: #000000, $alpha: 0.5);
         width: 100vw;
+        // height: 100vh;
     }
     .description{
         // background-color: rgba($color: #000000, $alpha: 0.5);
